# trading_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: FindChronos.cmake
config/: example.yaml  live_binance_testnet.yaml
include/chronos/backtest/: backtest_engine.hpp  metrics.hpp  time_replayer.hpp
include/chronos/core/: config.hpp  error.hpp  types.hpp
include/chronos/execution/: binance_http_client.hpp  binance_user_stream.hpp  execution_handler.hpp  order_gateway.hpp
include/chronos/io/protocols/: binance_json_protocol.hpp  okx_json_protocol.hpp  protocol.hpp
include/chronos/io/security/: hmac_sha256.hpp  security.hpp
include/chronos/io/transports/: transport.hpp  websocket_tls_transport.hpp
include/chronos/logging/: log_reader.hpp  log_writer.hpp  zmq_bridge.hpp
include/chronos/market_data/: adapter_concept.hpp  any_gateway.hpp  gateway.hpp  gateway_v2_factory.hpp  orderbook.hpp  orderbook_v2.hpp
include/chronos/market_data/adapters/: binance_adapter.hpp  okx_adapter.hpp  thin_mux_adapter.hpp
include/chronos/monitoring/: health_monitor.hpp
include/chronos/risk/: risk_engine.hpp
include/chronos/strategies/: grid_strategy.hpp
include/chronos/trading/: order_id_generator.hpp  position_manager.hpp  strategy.hpp  strategy_engine.hpp
include/chronos/utils/: cpu_affinity.hpp  mpmc_queue.hpp
src/: app_config.hpp  main.cpp
tools/: generate_demo_logs.cpp
